# freertos_intro_qemu

./: .gitignore  .gitmodules  README.md  configure.sh
.github/workflows/: c-cpp.yml
0_base/: CMakeLists.txt  FreeRTOSConfig.h  README.md  demo_hw.c  demo_hw.h  main.c  mps2_an385_uart.h  uart.c  uart.h  util.h
0_base/misc/: CMakeLists.txt  IntQueueTimer.c  IntQueueTimer.h  startup_gcc.c
0_base/misc/CMSIS/: CMakeLists.txt
0_base/misc/Snapshot-Trace/: CMakeLists.txt
0_base/misc/Snapshot-Trace/config/: trcConfig.h
0_base/misc/Snapshot-Trace/kernelports/FreeRTOS/config/: trcKernelPortConfig.h
0_base/misc/cmake/: arm.cmake  common_demo.cmake  freertos.cmake
0_cmake/: CMakeLists.txt  README.md
0_cmake/misc/: CMakeLists.txt  FreeRTOS_Source
0_original/: FreeRTOS
10_deadlock_starvation/: CMakeLists.txt  README.md  demo_chair.c  demo_deadlock.c  demo_livelock.c  demo_stick_prio.c
10_deadlock_starvation_challenge/: README.md  demo.c
11_priority_inversion/: CMakeLists.txt  README.md  demo.c  demo_inheritance.c
11_priority_inversion_challenge/: CMakeLists.txt  README.md  demo.c
1_snapshot/: CMakeLists.txt  README.md  main.c
2_blinky/: README.md  app.h  demo.c
2_empty/: README.md  app.c  main.c
2_empty/misc/: Snapshot-Trace
3_task_scheduling/: README.md  app.c  demo.c
3_task_scheduling/misc/: FreeRTOS_Demo_Common
3_task_scheduling_challenge/: README.md  app.c  demo.c
4_memory/: CMakeLists.txt  README.md  app.c  demo.c  demo1.c  demo2.c  demo3.c  demo4.c  demo5.c  demo6.c
4_memory_challenge/: 0_base  README.md  app.c  demo.c
5_queue/: README.md  app.c  demo.c
5_queue_challenge/: README.md  demo.c
6_mutex/: CMakeLists.txt  README.md  demo.c  demo.h  demo_mutex.c  demo_race.c
6_mutex_challenge/: README.md  app.c  demo.c
7_semaphore/: README.md  app.c  demo.c
7_semaphore_challenge/: README.md  app.c  demo.c
8_sw_timers/: CMakeLists.txt  README.md  app.c  demo.c
8_sw_timers_challenge/: README.md  app.c  demo.c
9_hw_int/: CMakeLists.txt  README.md  demo.c  demo_adc.c  demo_notify.c  demo_tm.c
9_hw_int_challenge/: CMakeLists.txt  demo.c  demo.h  demo_init.c  demo_init.h
config/vscode/: gen_vs_config.sh  launch.template  tasks.template
misc/Snapshot-Trace/: README.md
misc/Snapshot-Trace/config/: trcConfig.h  trcSnapshotConfig.h
misc/Snapshot-Trace/kernelports/FreeRTOS/: CMakeLists.txt
misc/Snapshot-Trace/streamports/RingBuffer/: CMakeLists.txt
misc/cmake/: arm.cmake  common_demo.cmake  freertos.cmake  log.cmake
misc/shell/: build.sh  build_run_qemu.sh  cleanbuild_run_qemu.sh  preprocess.sh  rebuild.sh  rebuild_all.sh  run_qemu.sh  util.sh
shell/: build_run_qemu.sh  rebuild.sh  rebuild_all.sh  rebuild_run_qemu.sh  run_qemu.sh  screen_hw.sh  util.sh
